--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="zonaJuego">
-
+            <p id="mensaje">Presiona "Espacio" para iniciar</p>
         </div>
     </div>
 </body>
